...
        doneButton.setTitleColor(.white, for: .normal)
        doneButton.setTitle("Done", for: .normal)
        doneButton.setTitleColor(.white, for: .disabled)
        doneButton.addTarget(self, action: #selector(doneButtonTapped), for: .touchUpInside)
        doneButton.showsTouchWhenHighlighted = true
        doneButton.isEnabled = true
        doneButton.accessibilityLabel = "accessoryViewDoneButton"
        doneButton.isAccessibilityElement = true
        return doneButton
    }()

    func configureUI() {
        self.frame = CGRect(x: 0, y: 0, width: self.superview?.frame.width ?? 0, height: 45)
...
