...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NLB-8p-ZUJ">
                                <rect key="frame" x="87" y="196" width="240" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="textFieldWithoutCounterAccessoryView"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="240" id="JoZ-wx-jJa"/>
                                    <constraint firstAttribute="height" constant="30" id="XMT-5i-7Wc"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
